infra/deployments/fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  selector:
    app: fe
  ports:
  - port: 80 
    targetPort: 80
